[metadata]
name = gym_plannable
version = attr: gym_plannable.VERSION
description = Provides an OpenAI-Gym-like interface for environments that support planning and for multi-agent environments.
long_description = file: README.md
keywords = gym, planning, game playing, search, multi-player, multi-agent
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
author = Michal Gregor

[options]
zip_safe = False
include_package_data = True
packages = find:
;scripts =
;  bin/first.py
;  bin/second.py
install_requires =
   gym

[options.package_data]
* = *.txt, *.rst
;hello = *.msg

[options.extras_require]
javascript_players = notebook_invoke

;[options.packages.find]
;exclude =
;    src.subpackage1
;    src.subpackage2
